Changelog
=========

1.3.2 (unreleased)
------------------

- Set a caching header for teaser portlet images.
  [deif]


1.3.1 (2014-02-10)
------------------

- Drop Plone.4.1 compatibility due to Plone-bugs  which interfere with our testsetup and were only fixed in 4.2
  (see: https://github.com/plone/Products.CMFPlone/pull/49)
  [tschanzt]

- Fix Subsitelogoviewlet when the context are portal tools.
  [tschanzt]

- Fix display issue with FileChunk instances after upgrading Plone from
  4.2.x to Plone 4.3.2.
  Reported in https://github.com/4teamwork/ftw.subsite/issues/39
  [mathias.leimgruber]


1.3.0 (2013-09-24)
------------------

- Added browserview returning available languages.
  [Julian Infanger]

- Refactor the language selector to be a "actionMenu" instead of a linklist
  and show the language selector on the site root too, when subsites are
  configured to show the site root as language.
  [jone]

- Fixed problem if the subsite logo is deleted.
  [Julian Infanger]

- Hide banner viewlet from folder_contents when root_only option enabled.
  [jone]


1.2.0 (2013-07-02)
------------------

- Add checkbox for showing Plone Site in language switcher.
  [jone]

- Added css-class to subsite logo.
  [Julian Infanger]

- Use native languagename for languageswitcher.
  [tschanzt]


1.1.4 (2013-06-04)
------------------

- Use SitemapQueryBuilder not NavtreeQueryBuilder for sitemap customization.
  [mathias.leimgruber]


1.1.3 (2013-06-04)
------------------

- Fix performance issue while rendering the teaser portlet.
  [mathias.leimgruber]

1.1.2 (2013-06-04)
------------------

- Make sitemap work relative to a subsite and plone root.
  [mathias.leimgruber]

- Set input/output mime type of the addition_css text area to text/plain.
  Also return the addional_css as structured text.
  [mathias.leimgruber]


1.1.1 (2013-06-03)
------------------

- Use logo image scale for logo instead of mini.
  [Julian Infanger]

- Updated translations for teaser portlet.